envoy/manifests/deploy-envoy-placeholder.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: ubuntu:20.04
          command: ["/usr/bin/sleep", "9999999"]
          ports:
            - containerPort: 8080
              hostPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: host
              mountPath: /host
          # resources:
          #   requests:
          #     memory: "128Mi"
          #   limits:
          #     memory: "256Mi"
      volumes:
        - name: host
          hostPath:
            path: /host
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  ports:
    - name: admin
      port: 9901
      protocol: TCP
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: envoy
