envoy/manifests/envoy-static-virtualhost.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  clusters:
  - name: httpbin-no-tls
    type: STRICT_DNS
    connect_timeout: 1s
    load_assignment:
      cluster_name: httpbin-no-tls
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin-no-tls
                port_value: 80
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: httbin-no-tls-route
            virtual_hosts:
            - name: httbin-no-tls-virtualhost
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: httpbin-no-tls
          http_filters:
          - name: envoy.router
            typed_config: {}
